@@ -19,6 +19,7 @@
 * Cybersource: Use standard :phone field [cade]
 * Orbital: Fix/tweak AVS codes [boone]
 * Quickpay: Add v7 support [larspind]
+* Authorize.Net CIM: Add option to not mark transactions as test [alanandrade]
 
 == Version 1.38.1 (September 16, 2013)
 
